add_library(car_park car_park.cpp)
add_library(user user.cpp)
add_library(usersDAO usersDAO.cpp)
add_library(moneyPerPeriod moneyPerPeriod.cpp)
add_library(moneyPerPeriodDAO moneyPerPeriodDAO.cpp)
add_library(driver driver.cpp)
add_library(driversDAO driversDAO.cpp)
add_library(order order.cpp)
add_library(ordersDAO ordersDAO.cpp)
add_library(car car.cpp)
add_library(carsDAO carsDAO.cpp)

target_include_directories(car_park PUBLIC ../include)
target_include_directories(user PUBLIC ../include)
target_include_directories(usersDAO PUBLIC ../include)
target_include_directories(moneyPerPeriod PUBLIC ../include)
target_include_directories(moneyPerPeriodDAO PUBLIC ../include)
target_include_directories(driver PUBLIC ../include)
target_include_directories(driversDAO PUBLIC ../include)
target_include_directories(order PUBLIC ../include)
target_include_directories(ordersDAO PUBLIC ../include)
target_include_directories(car PUBLIC ../include)
target_include_directories(carsDAO PUBLIC ../include)
# require at least c++ 20
target_compile_features(car_park PUBLIC cxx_std_20)
